Build Sign in Form grid styles and adjust view height for login button Add view height for login button to __&form to fix bug that misaligns login button. will need review

--- a/src/style/auth/signin.scss
+++ b/src/style/auth/signin.scss
@@ -8,7 +8,7 @@
 
   &__form {
     display: grid;
-    grid-template-rows: [email-s]64px [email-e password-s] 64px [password-e] 1fr [line-s] 2px [line-e login-s] 38px [login-e];
+    grid-template-rows: [email-s]64px [email-e password-s] 64px [password-e] 68vh [line-s] 2px [line-e login-s] 38px [login-e];
   }
 }
 
@@ -24,6 +24,7 @@
     border-top: 1px solid #ccc;
   }
   &__login {
+    margin-top: 39px;
     grid-row: login-s/login-e;
   }
 }
